--- a/src/assets/documents/components/checkbox.html
+++ b/src/assets/documents/components/checkbox.html
@@ -5,7 +5,8 @@
 <body>
   <div class="doc-category-title ">
     Form Control
-    <span class="docs-markdown-h3" id="contents"><span header-link="contents"></span>Contents</span>
+    <span class="docs-markdown-h3" id="contents">
+      <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
     Checkbox
@@ -17,19 +18,47 @@
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-markdown-h3" id="examples"><span header-link="examples"></span>Examples</span>
+
+    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+
+    <span class="docs-markdown-h3" id="examples">
+      <span header-link="examples"></span>Examples</span>
+
   </div>
+
   <div class="doc-desc-2">
-    Use in forms to toggle the state of something on or off.
+    Checkboxes are for making selections from a list. They let users select more than one item and allow for easy selection or
+    deselection of all items with a parent checkbox.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="checkbox-basic"></div>
   </div>
+
+  <div id="exampleWrapper">
+
+    <div class="doc-desc-2">
+      When not all child checkboxes are checked, the parent checkbox becomes an indeterminate checkbox.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="checkbox-indetermine"></div>
+    </div>
+
+    <div class="doc-desc-2">
+      When checkbox is disabled, actions are unusable and un-clickable, it only serves the purpose of a visual representation of
+      the data.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="checkbox-disable"></div>
+    </div>
+
+  </div>
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
     Props
-    <span class="docs-markdown-h3" id="props"><span header-link="props"></span>Props</span>
+    <span class="docs-markdown-h3" id="props">
+      <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
     To get a customized checkbox, just set
@@ -68,7 +97,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Best Practices
-    <span class="docs-markdown-h3" id="best_practices"><span header-link="best_practices"></span>Best Practices</span>
+    <span class="docs-markdown-h3" id="best_practices">
+      <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
   <div class="doc-desc-2">
@@ -87,7 +117,8 @@
 
   <div class="doc-title-2">
     Usage & Content guidelines
-    <span class="docs-markdown-h3" id="content_guidelines"><span header-link="content_guidelines"></span>Content guidelines</span>
+    <span class="docs-markdown-h3" id="content_guidelines">
+      <span header-link="content_guidelines"></span>Content guidelines</span>
   </div>
 
   <div class="doc-desc-2">
@@ -113,7 +144,7 @@
       <img src="assets/img/doc/checkbox-list-do.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img  src="assets/img/doc/checkbox-list-dont.png" alt="">
+      <img src="assets/img/doc/checkbox-list-dont.png" alt="">
     </div>
   </div>
 
@@ -123,18 +154,18 @@
 
   <div class="doc-title-2">
     Design specs
-    <span class="docs-markdown-h3" id="design_specs"><span header-link="design_specs"></span>Design specs</span>
+    <span class="docs-markdown-h3" id="design_specs">
+      <span header-link="design_specs"></span>Design specs</span>
   </div>
 
 
   <div class="docs-usage-spec docs-usage-center" style="height:280px">
-    <img src="assets/img/doc/checkbox-design.png"
-    alt="">
+    <img src="assets/img/doc/checkbox-design.png" alt="">
   </div>
-  
 
 
-  
+
+
 </body>
 
 </html>
