--- a/src/assets/examples/form-field-hint/form-field-hint.component.html
+++ b/src/assets/examples/form-field-hint/form-field-hint.component.html
@@ -6,4 +6,5 @@
          [(ngModel)]="value"
          (blur)="value='All Member'"
          placeholder="Member">
+  <mat-hint align="start">Form hint</mat-hint>
 </mat-form-field>
