--- a/src/assets/documents/components/formfield.html
+++ b/src/assets/documents/components/formfield.html
@@ -15,17 +15,58 @@
     Text fields let users enter and edit text.
   </div>
   <div class="doc-divider"></div>
+
   <div class="doc-title-2">
     Examples
+    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
+
   <div class="doc-desc-2">
     Text fields allow users to enter text into a UI. They typically appear in forms and dialogs.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="form-field-basic"></div>
   </div>
+
+  <div id="exampleWrapper">
+
+    <div class="doc-desc-2">
+      Hint text conveys additional guidance about the input field, such as how it will be used.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="form-field-hint"></div>
+    </div>
+    <div class="doc-desc-2">
+      Area form fields are taller than default form fields and wrap overflow text onto a new line. They are a fixed height and
+      scroll vertically when the cursor reaches the bottom of the field.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="form-field-textarea"></div>
+    </div>
+    <div class="doc-desc-2">
+      When text input isn’t accepted, the field turns to red.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="form-field-error"></div>
+    </div>
+    <div class="doc-desc-2">
+      A disabled form field is unusable and un-clickable and are rendered in gray by default in browsers.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="form-field-disable"></div>
+    </div>
+
+
+
+  </div>
+
+
+
+
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -113,10 +154,9 @@
       <span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  
+
   <div class="docs-usage-spec docs-usage-center" style="height:280px">
-    <img src="assets/img/doc/formfield-spec.png"
-    alt="">
+    <img src="assets/img/doc/formfield-spec.png" alt="">
   </div>
 
 </body>
