--- a/src/assets/examples/form-field-disable/form-field-disable.component.html
+++ b/src/assets/examples/form-field-disable/form-field-disable.component.html
@@ -5,5 +5,6 @@
          (focus)="value=''"
          [(ngModel)]="value"
          (blur)="value='All Member'"
-         placeholder="Member">
+         placeholder="Member"
+         disabled="true">
 </mat-form-field>
