Add Examples : Radio Button

--- a/src/assets/documents/components/radio.html
+++ b/src/assets/documents/components/radio.html
@@ -5,7 +5,8 @@
 <body>
   <div class="doc-category-title ">
     Form Control
-    <span class="docs-markdown-h3" id="contents">
+    <span class="docs-markdown-h3"
+          id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
@@ -17,19 +18,35 @@
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-markdown-h3" id="examples">
+    <span class="docs-more-example"
+          doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-markdown-h3"
+          id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
+
   <div class="doc-desc-2">
-    Use radio buttons where users must make a single selection.  </div>
+    Use radio buttons where users must make a single selection. </div>
   <div class="doc-example-container">
     <div app-docs-example="radio-button-basic"></div>
   </div>
+
+  <div id="exampleWrapper">
+    <div class="doc-desc-2">
+      When radio button is disabled, actions are unusable and un-clickable, it only serves the purpose of a visual representation
+      of the data. </div>
+    <div class="doc-example-container">
+      <div app-docs-example="radio-button-disable"></div>
+    </div>
+  </div>
+
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
     Props
-    <span class="docs-markdown-h3" id="props">
+    <span class="docs-markdown-h3"
+          id="props">
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
@@ -63,12 +80,14 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Best Practices
-    <span class="docs-markdown-h3" id="best_practices">
+    <span class="docs-markdown-h3"
+          id="best_practices">
       <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
   <div class="doc-desc-2">
-    Use radio button to:    <ul class="doc-list">
+    Use radio button to:
+    <ul class="doc-list">
       <li>Select a single option from a list
       </li>
       <li>Expose all available options</li>
@@ -82,7 +101,8 @@
 
   <div class="doc-title-2">
     Usage &amp; Content guidelines
-    <span class="docs-markdown-h3" id="content_guidelines">
+    <span class="docs-markdown-h3"
+          id="content_guidelines">
       <span header-link="content_guidelines"></span>Content guidelines</span>
   </div>
 
@@ -91,16 +111,20 @@
   </div>
 
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:200px">
-      <img src="assets/img/doc/radio-do.png" alt="">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center"
+         style="height:200px">
+      <img src="assets/img/doc/radio-do.png"
+           alt="">
     </div>
-    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:200px">
-      <img src="assets/img/doc/radio-dont.png" alt="">
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center"
+         style="height:200px">
+      <img src="assets/img/doc/radio-dont.png"
+           alt="">
     </div>
   </div>
 
 
-  
+
 
   <div class="doc-divider">
 
@@ -108,13 +132,16 @@
 
   <div class="doc-title-2">
     Design specs
-    <span class="docs-markdown-h3" id="design_specs">
+    <span class="docs-markdown-h3"
+          id="design_specs">
       <span header-link="design_specs"></span>Design specs</span>
   </div>
 
 
-  <div class="docs-usage-spec docs-usage-center" style="height:280px">
-    <img src="assets/img/doc/radio-spec.png" alt="">
+  <div class="docs-usage-spec docs-usage-center"
+       style="height:280px">
+    <img src="assets/img/doc/radio-spec.png"
+         alt="">
   </div>
 
 
