--- a/src/assets/documents/components/select.html
+++ b/src/assets/documents/components/select.html
@@ -5,7 +5,8 @@
 <body>
   <div class="doc-category-title ">
     Form Control
-    <span class="docs-markdown-h3" id="contents">
+    <span class="docs-markdown-h3"
+          id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
@@ -13,25 +14,38 @@
   </div>
   <div class="doc-desc-1">
     Select allows users to select from a single-option menu. Select is a form control for selecting a value from a set of options.
-    </div>
+  </div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-markdown-h3" id="examples">
+    <span class="docs-markdown-h3"
+          id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
+
   <div class="doc-desc-2">
     In simple select, option menus positioned under their emitting elements such that the currently selected menu item appears
     under of the emitting element. </div>
   <div class="doc-example-container">
     <div app-docs-example="select-basic"></div>
   </div>
+
+  <div id="exampleWrapper">
+    <div class="doc-desc-2">
+      A disabled select is unusable and un-clickable and are rendered in gray by default in browsers. </div>
+    <div class="doc-example-container">
+      <div app-docs-example="select-disable"></div>
+    </div>
+
+  </div>
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
     Props
-    <span class="docs-markdown-h3" id="props">
+    <span class="docs-markdown-h3"
+          id="props">
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
@@ -65,7 +79,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Best Practices
-    <span class="docs-markdown-h3" id="best_practices">
+    <span class="docs-markdown-h3"
+          id="best_practices">
       <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
@@ -86,7 +101,8 @@
 
   <div class="doc-title-2">
     Usage &amp; Content guidelines
-    <span class="docs-markdown-h3" id="content_guidelines">
+    <span class="docs-markdown-h3"
+          id="content_guidelines">
       <span header-link="content_guidelines"></span>Content guidelines</span>
   </div>
 
@@ -95,11 +111,15 @@
   </div>
 
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/select-do.png" alt="">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center"
+         style="height:160px">
+      <img src="assets/img/doc/select-do.png"
+           alt="">
     </div>
-    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/select-dont.png" alt="">
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center"
+         style="height:160px">
+      <img src="assets/img/doc/select-dont.png"
+           alt="">
     </div>
   </div>
 
@@ -109,18 +129,21 @@
 
   <div class="doc-title-2">
     Design specs
-    <span class="docs-markdown-h3" id="design_specs">
+    <span class="docs-markdown-h3"
+          id="design_specs">
       <span header-link="design_specs"></span>Design specs</span>
   </div>
 
 
-  <div class="docs-usage-spec docs-usage-center" style="height:280px">
-    <img src="assets/img/doc/select-spec.png" alt="">
+  <div class="docs-usage-spec docs-usage-center"
+       style="height:280px">
+    <img src="assets/img/doc/select-spec.png"
+         alt="">
   </div>
 
 
 
- 
+
 
 </body>
 
