Add Examples : Slide Toggle

--- a/src/assets/documents/components/slidetoggle.html
+++ b/src/assets/documents/components/slidetoggle.html
@@ -1,30 +1,49 @@
-<html><head></head>
+<html>
+
+<head></head>
 
 <body>
   <div class="doc-category-title ">
     Form Control
-    <span class="docs-markdown-h3" id="contents"><span header-link="contents"></span>Contents</span>
+    <span class="docs-markdown-h3"
+          id="contents">
+      <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
-    Slide Toggle  </div>
+    Slide Toggle </div>
   <div class="doc-desc-1">
-    Slider Toggles are used for binary actions. They are commonly used for “On/Off” situations.  </div>
+    Slider Toggles are used for binary actions. They are commonly used for “On/Off” situations. </div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-markdown-h3" id="examples"><span header-link="examples"></span>Examples</span>
+    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-markdown-h3"
+          id="examples">
+      <span header-link="examples"></span>Examples</span>
   </div>
+
   <div class="doc-desc-2">
-    Give user control over an option or feature that can be turned on or off.  </div>
+    Default slide toggle is an on/off control that can be toggled via clicking or dragging. </div>
   <div class="doc-example-container">
     <div app-docs-example="slide-toggle-basic"></div>
   </div>
+
+  <div id="exampleWrapper">
+    <div class="doc-desc-2">
+      Slide toggle that cannot be selected can a disabled state. </div>
+    <div class="doc-example-container">
+      <div app-docs-example="slide-toggle-disable"></div>
+    </div>
+  </div>
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
     Props
-    <span class="docs-markdown-h3" id="props"><span header-link="props"></span>Props</span>
+    <span class="docs-markdown-h3"
+          id="props">
+      <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
     To get a customized checkbox, just set
@@ -57,7 +76,9 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Best Practices
-    <span class="docs-markdown-h3" id="best_practices"><span header-link="best_practices"></span>Best Practices</span>
+    <span class="docs-markdown-h3"
+          id="best_practices">
+      <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
   <div class="doc-desc-2">
@@ -75,23 +96,29 @@
 
   <div class="doc-title-2">
     Usage &amp; Content guidelines
-    <span class="docs-markdown-h3" id="content_guidelines"><span header-link="content_guidelines"></span>Content guidelines</span>
+    <span class="docs-markdown-h3"
+          id="content_guidelines">
+      <span header-link="content_guidelines"></span>Content guidelines</span>
   </div>
 
   <div class="doc-desc-2">
-    Do not alternate the main color of the toggle  </div>
+    Do not alternate the main color of the toggle </div>
 
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:200px">
-      <img src="assets/img/doc/slidertoggle-do.png" alt="">
+    <div class="docs-usage-do docs-usage-w50 docs-usage-center"
+         style="height:200px">
+      <img src="assets/img/doc/slidertoggle-do.png"
+           alt="">
     </div>
-    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:200px">
-      <img src="assets/img/doc/slidertoggle-dont.png" alt="">
+    <div class="docs-usage-dont docs-usage-w50 docs-usage-center"
+         style="height:200px">
+      <img src="assets/img/doc/slidertoggle-dont.png"
+           alt="">
     </div>
   </div>
 
 
-  
+
 
   <div class="doc-divider">
 
@@ -99,15 +126,21 @@
 
   <div class="doc-title-2">
     Design specs
-    <span class="docs-markdown-h3" id="design_specs"><span header-link="design_specs"></span>Design specs</span>
+    <span class="docs-markdown-h3"
+          id="design_specs">
+      <span header-link="design_specs"></span>Design specs</span>
   </div>
 
 
-  <div class="docs-usage-spec docs-usage-center" style="height:280px">
-    <img src="assets/img/doc/slidertoggle-spec.png" alt="">
+  <div class="docs-usage-spec docs-usage-center"
+       style="height:280px">
+    <img src="assets/img/doc/slidertoggle-spec.png"
+         alt="">
   </div>
-  
 
 
 
-</body></html>
+
+</body>
+
+</html>
