--- a/src/assets/documents/components/header.html
+++ b/src/assets/documents/components/header.html
@@ -5,7 +5,8 @@
 <body>
   <div class="doc-category-title">
     Naviagtion
-    <span class="docs-markdown-h3" id="contents">
+    <span class="docs-markdown-h3"
+          id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
@@ -17,20 +18,34 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-markdown-h3" id="examples">
+    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-markdown-h3"
+          id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
+
   <div class="doc-desc-2">
     Header are a special kind of toolbar that’s used for branding, navigation, search, and actions.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="header-basic"></div>
   </div>
+
+  <div id="exampleWrapper">
+    <div class="doc-desc-2">
+      Application switcher in header is used for switching between applications within a product.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="header-application"></div>
+    </div>
+  </div>
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
     Props
-    <span class="docs-markdown-h3" id="props">
+    <span class="docs-markdown-h3"
+          id="props">
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
@@ -106,12 +121,13 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Best Practices
-    <span class="docs-markdown-h3" id="best_practices">
+    <span class="docs-markdown-h3"
+          id="best_practices">
       <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
   <div class="doc-desc-2">
-      Header should:
+    Header should:
     <ul class="doc-list">
       <li>Persistent: Header appear at the top and bottom of each screen in an app, and can disappear upon scroll.</li>
       <li>Guiding: Header provide a reliable way to guide users through an app.</li>
@@ -127,7 +143,8 @@
 
   <div class="doc-title-2">
     Usage & Content guidelines
-    <span class="docs-markdown-h3" id="content_guidelines">
+    <span class="docs-markdown-h3"
+          id="content_guidelines">
       <span header-link="content_guidelines"></span>Content guidelines</span>
   </div>
   <div class="doc-desc-2">
@@ -135,25 +152,32 @@
     may cause misunderstanding. Don’t shrink text to fit on a single line.
   </div>
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/header-do.png" alt="">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center"
+         style="height:160px">
+      <img src="assets/img/doc/header-do.png"
+           alt="">
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center" style="height:160px;margin-top:24px">
-      <img src="assets/img/doc/header-dont.png" alt="">
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center"
+         style="height:160px;margin-top:24px">
+      <img src="assets/img/doc/header-dont.png"
+           alt="">
     </div>
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Design specs
-    <span class="docs-markdown-h3" id="design_specs">
+    <span class="docs-markdown-h3"
+          id="design_specs">
       <span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  <div class="docs-usage-spec docs-usage-center" style="height:248px">
-    <img src="assets/img/doc/header-spec.png" alt="">
+  <div class="docs-usage-spec docs-usage-center"
+       style="height:248px">
+    <img src="assets/img/doc/header-spec.png"
+         alt="">
   </div>
 
- 
+
 </body>
 
 
