--- a/src/assets/examples/header-basic/header-basic.component.html
+++ b/src/assets/examples/header-basic/header-basic.component.html
@@ -1,3 +1,4 @@
 <div class="example-container">
-  <viz-header title="Application" brandLink="/" userName="Stan Lee" type="primary"></viz-header>
+  <viz-header title="Application" brandLink="/" userName="Stan Lee" type="primary">
+  </viz-header>
 </div>
