--- a/libs/components/header/viz-header.component.html
+++ b/libs/components/header/viz-header.component.html
@@ -14,10 +14,10 @@
       </span>
     </div>
     <div class="navbar-right">
-      <!-- <div class="more" (click)='moreOnclick()' *ngIf="type === 'primary'">
+      <div class="more" (click)='moreOnclick()' *ngIf="application" mat-ripple [matMenuTriggerFor]="menu" #loginMenuTrigger="matMenuTrigger">
           <mat-icon *ngIf="badge" [matBadge]="badge" matBadgePosition="above after" matBadgeColor="warn">apps</mat-icon>
           <mat-icon *ngIf="!badge"matBadgePosition="above after" matBadgeColor="warn">apps</mat-icon>
-      </div> -->
+      </div>
       <div class="navbar-welcome" (click)='rightBtnOnClick()' *ngIf="type === 'primary'">
         <span>{{userName}}</span>
         <mat-icon>{{isDrop? "arrow_drop_up":"arrow_drop_down"}}</mat-icon>
@@ -32,4 +32,7 @@
       <ng-content></ng-content>
     </div>
   </div>
+   <mat-menu #menu="matMenu" [overlapTrigger]="false" class="viz-header-application-dropdown mat-elevation-z8">
+    <ng-content select="[application]"></ng-content> 
+   </mat-menu>
 </header>
