Add Examples : List

--- a/src/assets/documents/components/list.html
+++ b/src/assets/documents/components/list.html
@@ -5,7 +5,8 @@
 <body>
   <div class="doc-category-title ">
     Layout
-    <span class="docs-markdown-h3" id="contents">
+    <span class="docs-markdown-h3"
+          id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
@@ -18,25 +19,34 @@
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-markdown-h3" id="examples">
+    <span class="docs-more-example"
+          doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-markdown-h3"
+          id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
+
   <div class="doc-desc-2">
     Single-line list items with divider.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="list-basic"></div>
   </div>
-  <div class="doc-desc-2">
-    Single-line list items without divider.
+
+  <div id="exampleWrapper">
+    <div class="doc-desc-2">
+      Single-line list items without divider.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="list-nodivider"></div>
+    </div>
   </div>
-  <div class="doc-example-container">
-    <div app-docs-example="list-nodivider"></div>
-  </div>
+
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Props
-    <span class="docs-markdown-h3" id="props">
+    <span class="docs-markdown-h3"
+          id="props">
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
@@ -64,7 +74,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Best Practices
-    <span class="docs-markdown-h3" id="best_practices">
+    <span class="docs-markdown-h3"
+          id="best_practices">
       <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
@@ -85,7 +96,8 @@
 
   <div class="doc-title-2">
     Usage &amp; Content guidelines
-    <span class="docs-markdown-h3" id="content_guidelines">
+    <span class="docs-markdown-h3"
+          id="content_guidelines">
       <span header-link="content_guidelines"></span>Content guidelines</span>
   </div>
 
@@ -94,11 +106,15 @@
   </div>
 
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:304px">
-      <img src="assets/img/doc/list-do.png" alt="">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center"
+         style="height:304px">
+      <img src="assets/img/doc/list-do.png"
+           alt="">
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center" style="height:304px;margin-top:24px">
-      <img src="assets/img/doc/list-dont.png" alt="">
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center"
+         style="height:304px;margin-top:24px">
+      <img src="assets/img/doc/list-dont.png"
+           alt="">
     </div>
   </div>
 
@@ -106,15 +122,18 @@
 
   <div class="doc-title-2">
     Design specs
-    <span class="docs-markdown-h3" id="design_specs">
+    <span class="docs-markdown-h3"
+          id="design_specs">
       <span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  <div class="docs-usage-spec docs-usage-center" style="height:368px">
-    <img src="assets/img/doc/list-spec.png" alt="">
+  <div class="docs-usage-spec docs-usage-center"
+       style="height:368px">
+    <img src="assets/img/doc/list-spec.png"
+         alt="">
   </div>
 
- 
+
 </body>
 
 </html>
