Add Examples : Tabs

--- a/src/assets/documents/components/tabs.html
+++ b/src/assets/documents/components/tabs.html
@@ -18,19 +18,27 @@
   </div>
   <div class="doc-title-2">
     Examples
+    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
+
   <div class="doc-desc-2">
     Default tabs contain more than 3 items within a wide column. </div>
   <div class="doc-example-container">
     <div app-docs-example="tabs"></div>
   </div>
-  <div class="doc-desc-2 docs-mt24">
-    Simple tabs contain a few items within a narrow column. </div>
-  <div class="doc-example-container">
-    <div app-docs-example="tabs-narrow"></div>
+
+  <div id="exampleWrapper">
+    <div class="doc-desc-2 docs-mt24">
+      Simple tabs contain a few items within a narrow column. </div>
+    <div class="doc-example-container">
+      <div app-docs-example="tabs-narrow"></div>
+    </div>
   </div>
+
+  
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
