Add Examples : Tree

--- a/src/assets/documents/components/tree.html
+++ b/src/assets/documents/components/tree.html
@@ -17,14 +17,25 @@
   </div>
   <div class="doc-title-2">
     Examples
+    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
+
   <div class="doc-desc-2">
-    Tree contains groups of content and checkbox components. </div>
+    Tree contains groups of content. </div>
   <div class="doc-example-container">
     <div app-docs-example="tree-basic"></div>
   </div>
+
+  <div id="exampleWrapper">
+    <div class="doc-desc-2">
+      Tree can also contain other components such as checkbox. </div>
+    <div class="doc-example-container">
+      <div app-docs-example="tree-checkbox"></div>
+    </div>
+  </div>
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -52,7 +63,7 @@
         <td>Object</td>
         <td></td>
       </tr>
-      
+
     </tbody>
   </table>
   <div class="doc-divider"></div>
@@ -119,7 +130,7 @@
 
 
 
-  
+
 
 
 </body>
