--- a/src/assets/examples/tree-checkbox/tree-checkbox.component.html
+++ b/src/assets/examples/tree-checkbox/tree-checkbox.component.html
@@ -3,13 +3,13 @@
 
     <ng-container *VizTreeLeafDef="let node">
       <mat-icon></mat-icon>
-      {{node.name}}
+      <mat-checkbox [checked]="descendantsAllSelected(node)" [indeterminate]="descendantsPartiallySelected(node)" (change)="toggle(node)">{{node.name}}</mat-checkbox>
     </ng-container>
 
     <ng-container *VizTreeNodeDef="let node">
       <mat-icon (click)="node.isExpanded = !node.isExpanded"> {{node.isExpanded ? 'arrow_drop_down' : 'arrow_drop_up'}}</mat-icon>
-      {{node.name}}
+      <mat-checkbox [checked]="descendantsAllSelected(node)" [indeterminate]="descendantsPartiallySelected(node)" (change)="toggle(node)">{{node.name}}</mat-checkbox>
     </ng-container>
-
+    
   </viz-tree>
 </div>
