--- a/src/assets/documents/components/button.html
+++ b/src/assets/documents/components/button.html
@@ -18,15 +18,51 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
+    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
+
   <div class="doc-desc-2">
     Used most in the interface. Only use another style if a button requires more or less visual weight.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="button-basic"></div>
   </div>
+
+  <div id="exampleWrapper">
+    <div class="doc-desc-2">
+      Use against shaded or colorful backgrounds.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="button-stroked"></div>
+    </div>
+    <div class="doc-desc-2">
+      Used as second action beside primary button in a section or screen.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="button-text"></div>
+    </div>
+    <div class="doc-desc-2">
+      Can be used when an action need to be emphasised.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="button-icon-left"></div>
+    </div>
+    <div class="doc-desc-2">
+      Can be used when an action need to be emphasised.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="button-icon-right"></div>
+    </div>
+    <div class="doc-desc-2">
+      Use for actions that aren’t currently available.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="button-disable"></div>
+    </div>
+  </div>
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -126,7 +162,7 @@
     <img src="assets/img/doc/button-spec.png" alt="">
   </div>
 
-  
+
 </body>
 
 
