--- a/src/app/shared/example-viewer/example-viewer.scss
+++ b/src/app/shared/example-viewer/example-viewer.scss
@@ -5,7 +5,7 @@
   ::ng-deep {
     .mat-tab-label {
       padding: 0 0;
-      max-width: 80px;
+      // max-width: 80px;
       min-width: 0;
       margin-left: 20px;
     }
