--- a/src/assets/documents/components/badge.html
+++ b/src/assets/documents/components/badge.html
@@ -18,14 +18,30 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
+    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
+
   <div class="doc-desc-2">
-    Examples of badges containing text, using primary and secondary colors. The badge is applied to its children.  </div>
+    Examples of badges containing text, using primary and secondary colors. The badge is applied to its children. </div>
   <div class="doc-example-container">
     <div app-docs-example="badge-basic"></div>
   </div>
+
+  <div id="exampleWrapper">
+    <div class="doc-desc-2">
+      Examples of badges containing text, using primary and secondary colors. The badge is applied to its children. </div>
+    <div class="doc-example-container">
+      <div app-docs-example="badge-icon"></div>
+    </div>
+    <div class="doc-desc-2">
+      Examples of badges containing text, using primary and secondary colors. The badge is applied to its children. </div>
+    <div class="doc-example-container">
+      <div app-docs-example="badge-tabs"></div>
+    </div>
+  </div>
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -105,7 +121,7 @@
       <span header-link="content_guidelines"></span>Content guidelines</span>
   </div>
   <div class="doc-desc-2">
-    Badge should not block the over elements it support. Bagde should always stay on the right of the main elements.  </div>
+    Badge should not block the over elements it support. Bagde should always stay on the right of the main elements. </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/badge-block-do.png" alt="">
@@ -144,11 +160,10 @@
   </div>
 
   <div class="docs-usage-spec docs-usage-center" style="height:280px">
-    <img src="assets/img/doc/badge-spec.png"
-    alt="">
+    <img src="assets/img/doc/badge-spec.png" alt="">
   </div>
 
-  
+
 </body>
 
 
