Add Examples : Icon

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -545,6 +545,16 @@ td.mat-cell,
   }
 }
 
+//icon
+.viz-icon-small {
+  font-size: 18px;
+}
+.viz-icon-big {
+  font-size: 32px;
+  height: 32px;
+  width: 32px;
+}
+
 //paginator
 .mat-paginator {
   line-height: 24px;
