--- a/src/assets/documents/components/icon.html
+++ b/src/assets/documents/components/icon.html
@@ -18,15 +18,33 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
+    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
+
   <div class="doc-desc-2">
     For web projects, the best format is icon web font.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="icon-basic"></div>
   </div>
+
+  <div id="exampleWrapper">
+    <div class="doc-desc-2">
+      For web projects, the best format is icon web font.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="icon-small"></div>
+    </div>
+    <div class="doc-desc-2">
+      For web projects, the best format is icon web font.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="icon-big"></div>
+    </div>
+  </div>
+
   <div class="doc-divider">
   </div>
   <!-- <div class="doc-title-2">
@@ -91,10 +109,10 @@
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img  src="assets/img/doc/icon-pic-1.png" alt="">
+      <img src="assets/img/doc/icon-pic-1.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img  src="assets/img/doc/icon-pic-2.png" alt="">
+      <img src="assets/img/doc/icon-pic-2.png" alt="">
     </div>
   </div>
   <div class="doc-desc-2">
@@ -102,10 +120,10 @@
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img  src="assets/img/doc/icon-pic-3.png" alt="">
+      <img src="assets/img/doc/icon-pic-3.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img  src="assets/img/doc/icon-pic-4.png" alt="">
+      <img src="assets/img/doc/icon-pic-4.png" alt="">
     </div>
   </div>
   <div class="doc-desc-2">
@@ -113,10 +131,10 @@
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img  src="assets/img/doc/icon-pic-5.png" alt="">
+      <img src="assets/img/doc/icon-pic-5.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img  src="assets/img/doc/icon-pic-6.png" alt="">
+      <img src="assets/img/doc/icon-pic-6.png" alt="">
     </div>
   </div>
   <div class="doc-divider"></div>
@@ -127,10 +145,9 @@
   </div>
 
   <div class="docs-usage-spec docs-usage-center" style="height:280px">
-    <img src="assets/img/doc/icon-pic-7.png"
-    alt="">
+    <img src="assets/img/doc/icon-pic-7.png" alt="">
   </div>
- 
+
 </body>
 
 </html>
