--- a/src/assets/documents/components/feedbackindicator.html
+++ b/src/assets/documents/components/feedbackindicator.html
@@ -12,22 +12,36 @@
     Feedback Indicator
   </div>
   <div class="doc-desc-1">
-    Feedback indicator is used to inform user about important changes or persistent conditions. Feedback indicator shows at the top of the page or section they apply to.</div>
+    Feedback indicator is used to inform user about important changes or persistent conditions. Feedback indicator shows at the
+    top of the page or section they apply to.</div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
     Examples
+    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
-    Feedback indicator inside of modals render with less spacing and a paired-back design to fit within a content context.</div>
+    Use to communicate problems that need to be resolved.</div>
   <div class="doc-example-container">
     <div app-docs-example="feedback-indicator-basic"></div>
   </div>
-  <div class="doc-example-container docs-mt16">
-    <div app-docs-example="feedback-indicator-warning"></div>
+
+  <div id="exampleWrapper">
+    <div class="doc-desc-2">
+      Use to display information that needs attention or needs to be taken action.</div>
+    <div class="doc-example-container docs-mt16">
+      <div app-docs-example="feedback-indicator-warning"></div>
+    </div>
+    <div class="doc-desc-2">
+      Use to inform when actions are successfully completed. </div>
+    <div class="doc-example-container docs-mt16">
+      <div app-docs-example="feedback-indicator-success"></div>
+    </div>
   </div>
+
+
 
   <div class="doc-divider">
   </div>
