--- a/src/assets/examples/feedback-indicator-basic/feedback-indicator-basic.component.html
+++ b/src/assets/examples/feedback-indicator-basic/feedback-indicator-basic.component.html
@@ -1,1 +1,5 @@
-<viz-feedback-indicator message="Encounter ID failed 10 times with the error:  'invalid value'" type="error"></viz-feedback-indicator>
+<viz-feedback-indicator 
+    message="Encounter ID failed 10 times with the error:  'invalid value'" 
+    type="error" 
+    iconType="warning">
+</viz-feedback-indicator>
