--- a/src/assets/examples/feedback-indicator-warning/feedback-indicator-warning.component.html
+++ b/src/assets/examples/feedback-indicator-warning/feedback-indicator-warning.component.html
@@ -1,1 +1,5 @@
-<viz-feedback-indicator message="Encounter ID was warned 08 times with the warning:  'invalid value'" type="warning"></viz-feedback-indicator>
+<viz-feedback-indicator 
+    message="Encounter ID was warned 08 times with the warning:  'invalid value'" 
+    type="warning" 
+    iconType="warning">
+</viz-feedback-indicator>
