--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -18,15 +18,27 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Example
+    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
+
   <div class="doc-desc-2">
-    Use in forms to let user enter a date or date range.
+    Use in forms to let user enter a date.
   </div>
   <div class="doc-example-container">
-    <div app-docs-example="date-picker-basic"></div>
+    <div app-docs-example="date-picker-single"></div>
   </div>
+
+  <div id="exampleWrapper">
+    <div class="doc-desc-2">
+      Use in forms to let user enter a date range.
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="date-picker-basic"></div>
+    </div>
+  </div>
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -104,11 +116,10 @@
   </div>
 
   <div class="docs-usage-spec docs-usage-center" style="height:635px">
-    <img src="assets/img/doc/datepicker-spec.png"
-    alt="">
+    <img src="assets/img/doc/datepicker-spec.png" alt="">
   </div>
 
- 
+
   </div>
 </body>
 
