--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   type="rightMenu"
 >
   <nav mat-tab-nav-bar class='detail-navigator pc-header'>
-    <a mat-tab-link
+    <!-- <a mat-tab-link
       routerLink="/"
       routerLinkActive 
       #rla1="routerLinkActive"
@@ -17,6 +17,13 @@
       #rla2="routerLinkActive"
       [active]="rla2.isActive">
       <span class="tab-item">PRINCIPLES</span>
+    </a> -->
+    <a mat-tab-link
+      routerLink="/"
+      routerLinkActive 
+      #rla1="routerLinkActive"
+      [active]="!rla3.isActive && !rla4.isActive && rla1.isActive">
+      <span class="tab-item">TOOLKIT</span>
     </a>
     <a mat-tab-link
       routerLink="/components"
