**7. Chore** Change "allowing seamless integration with libraries like React, AngularJS, and server-side rendering" to "Allowing seamless integrations with Angular." >http://take.ms/wRh7g

--- a/src/app/pages/homepage/homepage.html
+++ b/src/app/pages/homepage/homepage.html
@@ -28,7 +28,7 @@
         <div id="seamless"></div>
       </div>
       <h3>Seamless integrations</h3>
-      <p>Use components designed to work in any context, allowing seamless integration with libraries like React, AngularJS, and server-side rendering</p>
+      <p>Use components designed to work in any context, allowing seamless integrations with Angular.</p>
     </div>
     <div>
       <div class="docs-feature-thumb">
