**2. Bug** Buttons have no padding > http://take.ms/UqPj4

--- a/src/app/pages/homepage/homepage.scss
+++ b/src/app/pages/homepage/homepage.scss
@@ -31,7 +31,9 @@
         }
         .button-sec {
           @extend %normal-font;
-          
+          button:nth-child(2) {
+            margin-left: 8px;
+          }
           margin-top: 30px;
         }
       }
