Fix Bug : Menu --> "– Dropdown container should not have border radius – the top of second dropdown should be aligned top with the selection on the first dropdown Please see reference link"

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -226,7 +226,9 @@ td.mat-cell,
 // }
 // menu style
 .cdk-overlay-pane {
+  transform: translateY(0) !important;
   .mat-menu-panel {
+    border-radius: 0px;
     .mat-menu-content {
       max-width: none;
       width: 280px;
